--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@fforw/landscaper",
+    "name": "@fforw/lines",
     "version": "0.0.1",
     "main": "index.js",
     "author": "Sven Helmberger",
